This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
5/14/00 5.32.0	New version for timing with Ajuba TclPro 1.4.  This new version
		of Expect has no new features or behaviors but a lot has been
		fixed since 5.31.0.

		Martin Buchholz <martin@xemacs.org> noted that his
		alphaev56-dec-osf4.0e has ptmx and ptmx_bsd (and ptm, pts, pty,
		ptym).  He suggested that BSD things are now usually
		deprecated so to skip ptmx_bsd if ptmx avail.

		Chang Li <changl@neatware.com> noted that debugger's bp cmd
		broke on every command.  Was a bug in breakpoint_trace from
		when we installed the new regexp engine.

		Jonathan Kamens fixed printf formats in several pty diags.

		rm_nulls -d was set to wrong value.

5/12/00 5.31.8	After receiving yet another request for fully versioned
		archives, gave in.

		Signal handler sometimes sent error to stderr inappropriately.

4/27/00 5.31.7	Rob Savoye fixed Debian ptys and properly checking of libpt.

3/8/00  5.31.6	Petrus Vloet <petrus.vloet@siemens.at> noted that Expect
		installed tclRegexp.h which included regex.h which of course
		misbehaves when it reads the system's version.  This is new
		since 8.0.  Since I need to revise the Clib anyway (which
		is what this install was for), I'll back this out for now.

3/6/00	5.31.5	Larry Virden noted that configure checked for threads twice.

2/19/00 5.31.4	Omer Azmon <oazmon@telsoft-solutions.com> note errors in
		pty_termios.c in exp_pty_test that caused problems during
		pty testing.

		Jeffrey Hobbs recommended having configure accept and warn
		about --enable-threads.

		John Ellson <ellson@lucent.com> noted configure's autoconf
		testing had leftover debugging code.  Also provided a fix for
		building w/shared libs on HP - appeared to be leftover from
		earlier Tcl-required configuration that has now disappeared.
